src/tess/tl/test/fail/test_fail_const_value_ufcs_mutate.tl
#module main
#import <Array.tl>

main() {
    arr: Const[Array[Int]] := Array[Int].create()
    arr.push(42)
    0
}
